--- a/css/layout.css
+++ b/css/layout.css
@@ -94,5 +94,5 @@ body {
   position: absolute;
   inset: 0 0 0 0;
   z-index: -2;
-  background: var(--primary-color);
+  background: var(--b-color);
 }
