--- a/css/style.css
+++ b/css/style.css
@@ -130,8 +130,7 @@ main {
 }
 
 .main_visual .main_visual_slide .itm {
-  height: calc(100vh );
-  
+  height: calc(100vh);
 }
 
 .main_visual .main_visual_slide .itm01 {
@@ -310,4 +309,188 @@ main {
   100% {
     transform: translate(-50%, 4px);
   }
+}
+
+.main_content .title h2 {
+  text-align: center;
+}
+.main_content .title p {
+  text-align: center;
+}
+
+.main_content .brand_tab_menu {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 4rem;
+}
+
+.main_content .brand_tab_menu button {
+  position: relative;
+  font-size: 1.8rem;
+  height: 3.2rem;
+  padding: 0 1.6rem;
+}
+
+.main_content .brand_tab_menu button::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background: var(--w-color);
+}
+.main_content .brand_tab_menu button::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  width: 0;
+  height: 1px;
+  background: var(--b-color);
+
+  transform: translate(-50%, 0);
+  transition: 0.4s;
+}
+
+.main_content .brand_tab_menu button.on::after {
+  width: 100%;
+}
+
+.main_content .brand_tab_content .con {
+  display: none;
+  gap: 3rem;
+}
+
+.main_content .brand_tab_content .con.on {
+  display: flex;
+}
+
+.main_content .brand_tab_content .con > * {
+  flex: 1;
+}
+
+.main_content .brand_tab_content .con a {
+  position: relative;
+}
+
+.main_content .brand_tab_content .con a::before {
+  content: attr(data-num);
+  position: absolute;
+  top: 0;
+  right: 0;
+
+  width: 3.2rem;
+  height: 3.2rem;
+
+  text-align: center;
+  line-height: 3.2rem;
+  background: #ff6347;
+  color: var(--w-color);
+  font-size: 2rem;
+}
+
+.main_content .brand_tab_content .con figure {
+  margin-bottom: 1.6rem;
+  background: #f7f7f7;
+}
+
+.main_content .brand_tab_content .con strong {
+  display: block;
+  text-align: center;
+  line-height: 2.4rem;
+  word-break: keep-all;
+
+  min-height: 4.8rem;
+}
+
+.main_content .brand_tab_content .con img {
+  width: 100%;
+}
+
+.main_product {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 640px;
+  background: url(../images/main_product01.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  background-attachment: fixed;
+
+  transition: 0.2s;
+}
+
+.main_product .title h2 > strong {
+  display: block;
+  text-align: center;
+}
+
+.main_product .title h2 {
+  font-size: 1.6rem;
+  font-weight: 400;
+  text-transform: uppercase;
+  letter-spacing: 1.6rem;
+  color: var(--w-color);
+  text-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
+}
+
+.main_product .menu_wrap {
+  display: flex;
+  gap: 4rem;
+}
+
+.main_product .menu_wrap a {
+  position: relative;
+  font-size: 3.2rem;
+  font-weight: 70rem;
+  color: var(--w-color);
+  text-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
+}
+
+.main_product .menu_wrap a::before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  top: -8px;
+
+  transform: translate(-50%, 0);
+
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background: var(--w-color);
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
+
+  display: none;
+}
+
+.main_product .menu_wrap a.on::before {
+  display: block;
+}
+
+.main_menu .swiper-wrapper {
+  transition-timing-function: linear;
+}
+
+.main_menu .main_menu_slide .itm .img_box {
+  margin-bottom: 2.4rem;
+}
+
+.main_menu .main_menu_slide .itm strong {
+  display: block;
+  text-align: center;
+  font-weight: 70rem;
+  margin-bottom: 1.6rem;
+}
+
+.main_menu .main_menu_slide .itm p {
+  display: block;
+  text-align: center;
+}
+
+.main_menu .btn_wrap {
+  text-align: center;
 }
