--- a/css/style.css
+++ b/css/style.css
@@ -429,6 +429,8 @@ main {
 }
 
 .main_product .title h2 {
+ 
+  z-index: 2;
   font-size: 1.6rem;
   font-weight: 400;
   text-transform: uppercase;
@@ -436,6 +438,7 @@ main {
   color: var(--w-color);
   text-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
 }
+
 
 .main_product .menu_wrap {
   display: flex;
@@ -493,4 +496,186 @@ main {
 
 .main_menu .btn_wrap {
   text-align: center;
+}
+
+.main_concept {
+}
+
+.main_concept .inner {
+  display: flex;
+  gap: 3rem;
+}
+
+.main_concept .inner > * {
+  flex: 1;
+
+  border-top: 1px solid var(--b-color);
+  padding-top: 6.4rem;
+}
+
+.main_concept .itm {
+  position: relative;
+}
+
+.main_concept .itm h3 {
+  font-size: 3.2rem;
+  font-weight: 70rem;
+  margin-bottom: 2.4rem;
+}
+
+.main_concept .itm::after {
+  content: "";
+  position: absolute;
+  top: 2.4rem;
+  right: 0;
+
+  width: 100%;
+  height: 100%;
+}
+
+.main_concept .icon01::after {
+  background-image: url(../images/iconset01.jpg);
+  background-position: -327px -306px;
+  width: 88px;
+  height: 116px;
+}
+.main_concept .icon02::after {
+  background-image: url(../images/iconset02.jpg);
+  background-position: -622px -198px;
+  width: 138px;
+  height: 136px;
+}
+.main_concept .icon03::after {
+  background-image: url(../images/iconset01.jpg);
+  background-position: -322px -470px;
+width: 97px;
+height: 83px;
+}
+
+.main_promotion {}
+
+.main_promotion .inner {
+  display: flex;
+  gap: 30px;
+}
+
+.main_promotion .inner .desc {
+  flex: 1;
+
+  padding-top: 40px;
+}
+
+.main_promotion .inner .desc {
+
+  padding-top: 40px;
+}
+
+.main_promotion .desc .control {
+  display: flex;
+  gap: 8px;
+}
+
+.main_promotion .desc .control button {
+  width: 40px;
+  height: 40px;
+  background:var(--bg-color);
+}
+
+.main_promotion .desc .control button img {
+  width: 16px;
+}
+
+.main_promotion .inner .movie {
+  flex: 2;
+}
+
+.main_promotion video {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+}
+
+.footer {
+  padding: 80px 0;
+  background: #333;
+}
+
+.footer .inner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.footer .sns {
+  display: flex;
+  gap: 16px;
+  margin-bottom: 24px;
+}
+
+.footer .customer {
+  display: flex;
+  gap: 32px;
+  margin-bottom: 8px;
+}
+
+
+
+.footer .customer a {
+  color: #fff;
+}
+
+.footer .customer li {
+  position: relative;
+}
+
+.footer .customer li~li::before {
+  content: "";
+  position: absolute;
+  left: -16px;
+  top: 50%;
+  transform: translate(0, -50%);
+
+  width: 1px;
+  height: 0.5em;
+  background: #999;
+}
+
+.footer .tel {
+  margin-bottom: 24px;
+  font-size: 14px;
+  line-height: 16px;
+  color: #fff;
+}
+
+.footer address {
+  margin-bottom: 24px;
+  font-size: 14px;
+  line-height: 16px;
+  color: #fff;
+
+  opacity: 0.5;
+}
+
+#flk {
+  background: #333;
+  color: #fff;
+  font-size: 14px;
+  padding: 8px 24px;
+}
+
+.to_top {
+  position: fixed;
+  bottom: 240px;
+  right: -80px;
+  z-index: 999;
+
+  width: 40px;
+  height: 40px;
+  background: #555;
+
+  transition: 0.4s;
+}
+
+.to_top.on {
+  right: 80px;
 }
