--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,3 @@
-main {
-  position: relative;
-  z-index: 1;
-  height: 200vh;
-}
-
 #header {
   position: fixed;
   top: 0;
@@ -13,14 +7,16 @@ main {
 }
 
 #header.on {
-  background: rgba(0, 0, 0, 0.75);
+  background: var(--b-color);
 }
 
 #header .header_wrap {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
+  max-width: 141rem;
+  margin: 0 auto;
   align-items: center;
-  margin: 0 8rem;
+  /* margin: 0 8rem; */
 }
 
 #header .header_wrap h1 img {
@@ -57,7 +53,7 @@ main {
   top: auto;
   left: 50%;
   transform: translate(-50%, -24px);
-  background: #000;
+  background: var(--b-color);
   border-radius: 8px;
   border: 1px solid rgba(255, 255, 255, 0.5);
 
@@ -385,7 +381,7 @@ main {
 
   text-align: center;
   line-height: 3.2rem;
-  background: #ff6347;
+  background: var(--b-color);
   color: var(--w-color);
   font-size: 2rem;
 }
@@ -429,7 +425,6 @@ main {
 }
 
 .main_product .title h2 {
- 
   z-index: 2;
   font-size: 1.6rem;
   font-weight: 400;
@@ -438,7 +433,6 @@ main {
   color: var(--w-color);
   text-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
 }
-
 
 .main_product .menu_wrap {
   display: flex;
@@ -480,6 +474,10 @@ main {
 
 .main_menu .main_menu_slide .itm .img_box {
   margin-bottom: 2.4rem;
+  background: var(--bg-color);
+  border: 2px solid var(--b-color);
+  border-radius: 8px;
+  overflow: hidden;
 }
 
 .main_menu .main_menu_slide .itm strong {
@@ -548,11 +546,12 @@ main {
 .main_concept .icon03::after {
   background-image: url(../images/iconset01.jpg);
   background-position: -322px -470px;
-width: 97px;
-height: 83px;
+  width: 97px;
+  height: 83px;
 }
 
-.main_promotion {}
+.main_promotion {
+}
 
 .main_promotion .inner {
   display: flex;
@@ -566,7 +565,6 @@ height: 83px;
 }
 
 .main_promotion .inner .desc {
-
   padding-top: 40px;
 }
 
@@ -578,7 +576,7 @@ height: 83px;
 .main_promotion .desc .control button {
   width: 40px;
   height: 40px;
-  background:var(--bg-color);
+  background: var(--bg-color);
 }
 
 .main_promotion .desc .control button img {
@@ -593,6 +591,25 @@ height: 83px;
   width: 100%;
   height: 300px;
   object-fit: cover;
+}
+
+.main_movie {
+  height: 640px;
+}
+
+.main_movie .title h2 {
+  font-size: 1.4rem;
+  font-weight: 40rem;
+  text-transform: uppercase;
+  letter-spacing: 1.6rem;
+  color: var(--w-color);
+  text-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
+}
+
+.main_movie .title p {
+  color: var(--w-color);
+  text-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
+  margin-bottom: 4rem;
 }
 
 .footer {
@@ -618,8 +635,6 @@ height: 83px;
   margin-bottom: 8px;
 }
 
-
-
 .footer .customer a {
   color: #fff;
 }
@@ -628,7 +643,7 @@ height: 83px;
   position: relative;
 }
 
-.footer .customer li~li::before {
+.footer .customer li ~ li::before {
   content: "";
   position: absolute;
   left: -16px;
@@ -678,4 +693,44 @@ height: 83px;
 
 .to_top.on {
   right: 80px;
+}
+
+.popup {
+  position: fixed;
+  top: 24rem;
+  right: 24rem;
+  z-index: 1000;
+
+  width: 32rem;
+}
+
+.popup .con {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: var(--b-color);
+
+  display: flex;
+  align-items: center;
+  height: 2rem;
+}
+
+.popup .con > * {
+  flex: 1;
+  position: relative;
+}
+
+.popup .con .day label {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: var(--b-color);
+  color: var(--w-color);
+  padding-left: 2.4rem;
+  cursor: pointer;
+}
+
+.popup .con .close {
+  color: var(--w-color);
 }
